<resources>
    <string name="app_name">Formulario</string>
    <string name="name">Nombre(s)</string>
    <string name="surname">Apellido Paterno</string>
    <string name="second_surname">Apellido Materno</string>
    <string name="save">Guardar</string>
    <string name="date_of_birth">Fecha de nacimiento</string>
    <string name="date_format">%1$d/%2$d/%3$d</string>
    <string name="error_empty">Este campo no puede estar vacío</string>
    <string name="error_regex">Formato o caractéres inválidos</string>
    <string name="aries">Aries</string>
    <string name="taurus">Tauro</string>
    <string name="gemini">Géminis</string>
    <string name="cancer">Cáncer</string>
    <string name="leo">Leo</string>
    <string name="virgo">Virgo</string>
    <string name="libra">Libra</string>
    <string name="scorpio">Escorpio</string>
    <string name="sagittarius">Sagitario</string>
    <string name="capricorn">Capricornio</string>
    <string name="aquarius">Acuario</string>
    <string name="pisces">Piscis</string>
    <string name="rat">Rata</string>
    <string name="ox">Buey</string>
    <string name="tiger">Tigre</string>
    <string name="rabbit">Conejo</string>
    <string name="dragon">Dragón</string>
    <string name="snake">Serpiente</string>
    <string name="horse">Caballo</string>
    <string name="goat">Cabra</string>
    <string name="monkey">Mono</string>
    <string name="rooster">Gallo</string>
    <string name="dog">Perro</string>
    <string name="pig">Cerdo</string>
    <string name="complete_name">Nombre:\n%1$s %2$s %3$s</string>
    <string name="final_date">Fecha de nacimiento: %1$s</string>
    <string name="rfc">RFC: %1$s</string>
    <string name="age">Edad: %1$d anio(s)</string>
    <string name="zodiac">Zodiaco:\n%1$s</string>
    <string name="chin_zodiac">Zodiaco Chino:\n%1$s</string>
    <string name="data">Ingresa tus datos</string>
    <string name="back">Regresar</string>
</resources>
